--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.26.0",
     "@types/node": "22.12.0",
     "@types/react": "19.0.8",
-    "eslint": "^9",
+    "eslint": "^9.26.0",
     "eslint-config-next": "15.1.6",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.1.0",
     "sass": "^1.83.4"
   }
 }
